[tool.poetry]
name = "1cv8-mgmt-tool"
version = "2024.04.28"
description = ""
authors = ["Ilya Bogdanov <zeerayne1337@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"
pywin32 = [
    { version = "^304", platform = "win32" },
]
aioboto3 = "^12.0.0"
filechunkio = "^1.8"
aioshutil = "^1.1"
aiofiles = "^23.2.1"
packaging = "23.2"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-spec = "^3.2.0"
pytest-mock = "^3.7.0"
pytest-asyncio = "^0.18.3"
pytest-env = "^0.6.2"
pytest-freezer = "^0.4.8"
pre-commit = "^2.19.0"
coveralls = "^3.3.1"
ruff = "^0.8.2"

[tool.poetry.group.debug.dependencies]
debugpy = "^1.6.6"

[tool.pytest.ini_options]
spec_header_format = "Case: {test_case}\nPath: {module_path}"
spec_test_format = '{result} {docstring_summary}'
spec_success_indicator = '✓'
spec_failure_indicator = '✗'
spec_skipped_indicator = '↷'
asyncio_mode = 'auto'
env = """
    PYTHONPATH=.
    1CV8MGMT_SETTINGS_MODULE=tests.settings
    """

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "W", "Q"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"surrogate/tests/test_surrogate.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
